@@ -1,3 +1,7 @@
+2008-07-19  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* POTFILES.in: Add src/twitux-account-dialog.c
+
 2008-04-23  Daniel Morales  <daniminas@gmail.com>
 
 	* POTFILES.IN: Add data/lists_dlg.xml and fix
